<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tips</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_prompt">Login or Register</string>
    <string name="register_prompt">Register New Account</string>
    <string name="search_by_username">Search by Username</string>
    <string name="search_by_tags">Search by Tags</string>
    <string name="search">Search</string>
    <string name="post_tip">Post Tip</string>
    <string name="post_comment">Post Comment</string>
    <string name="back">Back</string>
    <string name="desc">Simple back button</string>

</resources>
