<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/purdue_gold"
    tools:context="edu.purdue.cs.tips.MainActivity$LoginFragment" >

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_text"
        android:layout_below="@+id/username_input"
        android:text="@string/username" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:text="@string/password" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_input"
        android:layout_alignParentTop="true"
        android:layout_marginTop="76dp"
        android:inputType="textNoSuggestions"
        android:ems="10" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username_text"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword" />

    <ProgressBar
        android:id="@+id/loading_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="37dp" />
    
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_button"
        android:layout_alignBottom="@+id/register_button"
        android:layout_alignRight="@+id/password_input"
        android:text="@string/login" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_input"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="28dp"
        android:text="@string/register" />

</RelativeLayout>